code25_all/scala/11253770.txt
class A
trait TraitForA extends A

class D[T]
trait TraitForD extends D[A]

scala> new D[A] with TraitForD
res0: D[A] with TraitForD = $anon$1@145d424

scala> new D[A with TraitForA] with TraitForD
<console>:12: error: illegal inheritance;
 anonymous class $anon inherits different type instances of class D:
D[A] and D[A with TraitForA]
             new D[A with TraitForA] with TraitForD
                 ^

extends
scala> trait TraitForD2 { self: D[A] => }
defined trait TraitForD2

scala> new D[A with TraitForA] with TraitForD2
<console>:12: error: illegal inheritance;
 self-type D[A with TraitForA] with TraitForD2 does not conform to TraitForD2's
selftype TraitForD2 with D[A]
              new D[A with TraitForA] with TraitForD2
                                           ^

D[A with TraitForA]
D[A]
+T
D
+T
+T
